# rust_chat

./: README.md
chat-client/: Cargo.toml
chat-client/src/: main.rs
chat-server/: Cargo.toml
chat-server/src/: client.rs  main.rs
