[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
futures-util = {version = "0.3.24"}
serde = { version = "1.0.145", features = ["derive"] }
tokio = {version = "1.21.2", features = ["full"]}
tokio-stream = "0.1.11"
tokio-tungstenite = "*"
url = {version = "2.3.1"}
